[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turnpoint-purger"
version = "1.0.0"
description = "Automation toolkit for extracting TurnPoint client artefacts with a cinematic UI."
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "(Far)H4n_SOLO" }]
dependencies = [
    "python-dotenv>=1.0,<2",
    "selenium>=4.14,<5",
    "pandas>=2.1,<3",
    "openpyxl>=3.1,<4",
    "pillow>=10.0,<12.0",
]

[project.scripts]
turnpoint-purger-cli = "importcsv:main"
turnpoint-purger-gui = "turnpoint_purger_ui:launch_ui"
turnpoint-budgeter = "NDISBUDGETER:generate_budget_exports"

[tool.setuptools]
py-modules = ["importcsv", "turnpoint_purger_ui", "NDISBUDGETER", "purger_state"]
